Fix for bug 215465 (CSS :hover rules not working when using XML/XSLT along with an alternernate CSS). Fix by bz, r=sicking, sr=peterv.